testsuite/tests/qualified-strings/should_fail/all.T
setTestOpts(only_ways(['normal']));

test('qstrings_multiline_no_ext', normal, compile_fail, [''])
